[package]
name = "binance-api"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "OpenAPI Specifications for the Binance Public Spot API  API documents:   - [https://github.com/binance/binance-spot-api-docs](https://github.com/binance/binance-spot-api-docs)   - [https://binance-docs.github.io/apidocs/spot/en](https://binance-docs.github.io/apidocs/spot/en)"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = "^0.1"
url = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
hmac = "0.12"
sha2 = "0.10"