[package]
name = "sync"
authors = ["Zannis Kalampoukis <zannis.kal@gmail.com>"]
version = "0.1.0"
edition = "2021"


[[bin]]
name = "sync"
path = "src/main.rs"

[dependencies]
alloy-primitives = "0.8"
bitcoin = "0.32"
solana-sdk = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
headless_chrome = { version = "1", features = ["fetch"], optional = true }
fantoccini = { version = "0.21", optional = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
binance-api = { path = "../binance-api" }
ynab-api = { path = "../ynab-api" }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.11.0", features = ["v4"] }

[features]
default = ["headless"]
headless = ["headless_chrome"]
docker = ["fantoccini"]

