[package]
name = "ynab-api"
version = "1.72.1"
authors = ["OpenAPI Generator team and contributors"]
description = "Our API uses a REST based design, leverages the JSON data format, and relies upon HTTPS for transport. We respond with meaningful HTTP response codes and if an error occurs, we include error details in the response body.  API Documentation is at https://api.ynab.com"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[lib]
name = "ynab_api"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { workspace = true, features = ["json", "multipart", "blocking"] }
